# FutureSight

./: .gitignore  CHANGELOG.md  README.md
futuresight/: pyproject.toml  setup.cfg
futuresight/futuresight/: __init__.py  __main__.py  _cli.py  partycm.py  simulation.py  types.py
futuresight/test/: test_game.py
