[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "futuresight"
version = "0.0.1"
authors = [
    { name="Thomas Chiozzi", email="chiozzi.thomas@gmail.com"}
]
description = "Small package that provides tool to simulate the effectives of a conditional future sight effect in a Magic the Gathering game."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "tqdm",
]

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[project.scripts]
futuresight = "futuresight._cli:main_cli"